# flowrs

./: CLAUDE.md  Cargo.toml  README.md
src/: airflow.rs  app.rs  editor.rs  main.rs  ui.rs
src/airflow/: graph_layout.rs  managed_services.rs  topological_sort.rs
src/airflow/client/: base.rs
src/airflow/client/v1/: connection.rs  dag.rs  dagrun.rs  log.rs  mod.rs  task.rs  taskinstance.rs  variable.rs
src/airflow/client/v1/model/: connection.rs  dag.rs  mod.rs  task.rs  taskinstance.rs  variable.rs
src/airflow/client/v2/: connection.rs  dag.rs  dagrun.rs  log.rs  mod.rs  task.rs  taskinstance.rs  variable.rs
src/airflow/client/v2/model/: dag.rs  importerror.rs  mod.rs
src/airflow/config/: mod.rs
src/airflow/managed_services/: astronomer.rs  composer.rs  conveyor.rs  mwaa.rs
src/airflow/model/common/: connection.rs  dag.rs  importerror.rs  mod.rs  variable.rs
src/airflow/traits/: connection.rs  dag.rs  dagrun.rs  log.rs  mod.rs  task.rs  variable.rs
src/app/: environment_state.rs  model.rs  state.rs  worker.rs
src/app/events/: generator.rs
src/app/model/: config.rs  dagruns.rs  dags.rs  logs.rs  sortable_table.rs  taskinstances.rs
src/app/model/detail/: connection.rs  importerror.rs  mod.rs  variable.rs
src/app/model/popup/: commands_help.rs  error.rs  mod.rs
src/app/model/popup/config/: commands.rs
src/app/model/popup/dagruns/: commands.rs
src/app/model/popup/dags/: commands.rs
src/app/model/popup/logs/: commands.rs
src/app/model/popup/taskinstances/: commands.rs
src/commands/: run.rs
src/commands/config/: add.rs  model.rs  update.rs
src/ui/: common.rs  constants.rs
