[package]
name = "flowrs-tui"
version = "0.4.2"
edition = "2021"
description = "Flowrs is a Terminal User Interface (TUI) for Apache Airflow"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"
homepage = "https://github.com/jvanbuel/flowrs"
authors = ["jan@lightcone.be"]

[[bin]]
name = "flowrs"
path = "src/main.rs"


[package.metadata.dist]
formula = "flowrs"

[dependencies]
ansi-to-tui = { version = "7.0.0" }
anyhow = "1.0.100"
aws-config = { version = "1.8.11" }
aws-sdk-mwaa = "1.96.0"
backtrace = "0.3.76"
gcp_auth = "0.12.4"
chrono = "0.4.42"
async-trait = "0.1.89"
clap = { version = "^4.5", features = ["derive", "env"] }
crossterm = "0.29.0"
custom_error = "1.9.2"
dirs = "6.0.0"
env_logger = "0.11.8"
expectrl = "0.8.0" # Added for controlling interactive processes via pty
futures = "0.3.31"
indoc = "2.0.6"
inquire = "0.9.1"
left-pad = "1.0.1"
log = "0.4.28"
once_cell = "1.20.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rstest = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
shellexpand = "3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
strum = { version = "0.27.2", features = ["derive"] }
syntect = "5.3.0"
syntect-tui = "3.0.6"
time = { version = "0.3.44", features = [
  "serde",
  "serde-human-readable",
  "parsing",
  "macros",
] }
throbber-widgets-tui = "0.9.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"
webbrowser = "1.0.6"

[dev-dependencies]
mockito = "1.7.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
