[package]
name = "flowrs-tui"
version = "0.4.2"
edition = "2021"
description = "Flowrs is a Terminal User Interface (TUI) for Apache Airflow"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"
homepage = "https://github.com/jvanbuel/flowrs"
authors = ["jan@lightcone.be"]

[[bin]]
name = "flowrs"
path = "src/main.rs"


[package.metadata.dist]
formula = "flowrs"

[dependencies]
ansi-to-tui = { version = "7.0.0" }
anyhow = "1.0.100"
aws-config = { version = "1.8.11" }
aws-sdk-mwaa = "1.96.0"
backtrace = "0.3.76"
gcp_auth = "0.12.4"
chrono = "0.4.42"
async-trait = "0.1.89"
clap = { version = "^4.5", features = ["derive", "env"] }
crossterm = "0.29.0"
custom_error = "1.9.2"
dirs = "6.0.0"
env_logger = "0.11.8"
expectrl = "0.8.0" # Added for controlling interactive processes via pty
futures = "0.3.31"
indoc = "2.0.6"
inquire = "0.9.1"
left-pad = "1.0.1"
log = "0.4.28"
once_cell = "1.20.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "unstable-rendered-line-info"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rstest = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
shellexpand = "3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
snailquote = "0.3"
strum = { version = "0.27.2", features = ["derive"] }
syntect = "5.3.0"
syntect-tui = "3.0.6"
time = { version = "0.3.44", features = [
  "serde",
  "serde-human-readable",
  "parsing",
  "macros",
] }
throbber-widgets-tui = "0.9.0"
# Tokio features: minimal set required by flowrs + features needed by dependencies
# Core features used directly by flowrs:
#   - rt-multi-thread: Multi-threaded async runtime for #[tokio::main] and spawning tasks
#   - macros: Provides #[tokio::main] and #[tokio::test] attributes
#   - sync: mpsc channels for worker<->UI communication
#   - time: tokio::time::sleep for event polling delays
# Additional features required by dependencies (explicitly listed for documentation):
#   - net: Required by reqwest/hyper for HTTP networking
#   - io-util: Required by hyper-util for streaming I/O operations
#   - fs: Required by gcp_auth for reading credential files
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
toml = "0.9.8"
url = "2.5.7"
webbrowser = "1.0.6"

[dev-dependencies]
mockito = "1.7.0"

# Optimized for minimal binary size (used for local development and releases)
# Build time: ~3 minutes (increased from ~30s due to aggressive LTO)
# Binary size: ~13MB (reduced from ~33MB, 60% size reduction)
[profile.release]
opt-level = "z"          # Optimize for size
lto = "fat"              # Full link-time optimization for maximum size reduction
codegen-units = 1        # Better optimization opportunities (slower compile)
strip = true             # Automatically remove debug symbols
panic = "abort"          # Smaller binary, no unwinding code (tradeoff: immediate termination on panic)

# Distribution profile for cargo-dist (inherits aggressive size optimizations)
# Previously used lto="thin" for faster builds, but now prioritizes smaller binaries
# since ~3min build time is acceptable for the 60% size reduction benefit
[profile.dist]
inherits = "release"

[lints.clippy]
pedantic = "warn"
